--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -1785,3 +1785,109 @@ footer{
         object-fit: cover;
     }
 }
+
+
+
+
+
+/*checking*/
+.numbernadmailleftbar {
+    display: flex;
+}
+
+.left-bar-content {
+    height: auto;
+    width: max-content;
+    max-width: 50px;
+    height: calc( 100vh - 298px );
+}
+
+.left-bar {
+    top: 153px;
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    z-index: 9999;
+    padding: 0px;
+    overflow: hidden;
+    height: calc( 100vh - 150px);
+}
+
+ul.left-bar-icon {
+    width: 100%;
+    max-width: 9%;
+    height: 20%;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+}
+
+.numbernadmailleftbar {
+    /* transform: rotate(90deg); */
+    width: 6%;
+    height: 100%;
+    /* flex: 1; */
+    /* background: yellow; */
+    width: 100%;
+    height: calc( 100vh - 120px );
+    flex-direction: column;
+    /* flex-wrap: wrap; */
+}
+
+.numbernadmailleftbar a {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    /* padding: 0px 70px; */
+    /* display: flex; */
+    align-items: center;
+    font-size: 12px;
+    /* margin-left: 50px; */
+    /* transform: rotate(90deg); */
+    flex: 0 100%;
+}
+
+.numbernadmailleftbar a i {
+    font-size: 16px;
+    margin-right: 10px;
+    display: block;
+    margin: auto;
+    position: relative;
+    width: max-content;
+}
+
+.left-bar i {
+    opacity: 1;
+}
+
+.left-bar-icon li a {
+    opacity: 1;
+}
+.numbernadmailleftbar a span {
+    position: absolute;
+    transform: rotate(90deg);
+    top: 74px;
+    left: -31px;
+    width: 110px;
+}
+
+.numbernadmailleftbar a {
+    position: relative;
+}
+.numbernadmailleftbar {
+
+    height: 80%;
+    position: absolute;
+    left: 0px;
+    top: 130px;
+    width: 50px;
+    overflow: hidden;
+    flex-direction: inherit;
+    align-items: flex-start;
+    background: none
+
+}
+ul.left-bar-icon {
+    position: absolute;
+    top: 0px;
+}
